Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5920

Wrong context menu behavior for evaluated expression children

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 3.4.0-beta1
    • Qt Creator 2.3.0-rc
    • Debugger
    • None
    • 02404afd9fa582814c9a261295de03dd831a78ba

    Description

      Right-clicking a root evaluated expression opens a context menu with an option to remove it.

      Right-clicking a child of the evaluated expression also shows 'Remove Evaluated Expression ...', which does nothing. It should be replaced with 'Evaluate Expression ...'

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-5920
        # Subject Branch Project Status CR V

        Activity

          People

            hjk hjk
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes