debugger: Fix context menu behavior for evaluated expression children

Task-number: QTCREATORBUG-5920
Change-Id: I5e215fd1df9596deb3b821764806f1db65096572
Reviewed-on: http://codereview.qt.nokia.com/3610
Reviewed-by: hjk <qthjk@ovi.com>